// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search form Form should render correctly with a user 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="user"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Username or email address
        </span>
        <input
          className="sc-ifAKCX hBHdQq"
          defaultValue="someuser"
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-EHOje ihKsGU"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth search form Form should render correctly with no user 1`] = `
<div
  className="sc-gzVnrw kFjkBp"
>
  <div
    className="sc-htoDjs cFfunZ"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-bdVaJa iHrfuG"
        htmlFor="user"
      >
        <span
          className="sc-bwzfXH eLZbP"
        >
          Username or email address
        </span>
        <input
          className="sc-ifAKCX hBHdQq"
          defaultValue=""
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-EHOje ihKsGU"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;
